--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,11 @@
                     <mainClass>com.tuprofe.api.Application</mainClass>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>com.heroku.sdk</groupId>
+                <artifactId>heroku-maven-plugin</artifactId>
+                <version>1.1.3</version>
+            </plugin>
         </plugins>
     </build>    
 </project>
